--- a/projectviewer/main/style.css
+++ b/projectviewer/main/style.css
@@ -3,7 +3,7 @@
     vertical-align: middle;
     width: 200px;
     height: 200px;
-    background-image: url(./extra/icons/e48462f.png);
+    background-image: url(./e48462f.png);
     background-size: 100% auto;
     background-repeat: no-repeat;
     display: inline-block
