--- a/zulu/elements.css
+++ b/zulu/elements.css
@@ -1,5 +1,5 @@
 .logo-zulu-normal{
-    background-image: url("C:\Users\tully_08\Desktop\Code\Zulu\ZuluSSO.png");
+    background-image: url("https://codewww.pages.dev/zulu/ZuluSSO.png");
     width: 200px;
     height: 150px;
 }
